--- a/PANDA/PANDA.Web/PANDA.Web.csproj
+++ b/PANDA/PANDA.Web/PANDA.Web.csproj
@@ -1,22 +1,24 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <UserSecretsId>aspnet-PANDA.Web-8C63BE2A-B219-4DEF-BF16-B8E1754DC2E7</UserSecretsId>
+    <UserSecretsId>aspnet-Panda.Web-79E49AAB-46F2-4D9C-8A3F-344D3B99A900</UserSecretsId>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
   </ItemGroup>
 
 
   <ItemGroup>
-    <ProjectReference Include="..\PANDA.Data\PANDA.Data.csproj" />
-    <ProjectReference Include="..\PANDA.Models\PANDA.Models.csproj" />
+    <ProjectReference Include="..\Panda.Data\Panda.Data.csproj" />
+    <ProjectReference Include="..\Panda.Models\Panda.Models.csproj" />
   </ItemGroup>
 
 </Project>
