--- a/Eventures/Eventures.Web/Eventures.Web.csproj
+++ b/Eventures/Eventures.Web/Eventures.Web.csproj
@@ -11,12 +11,18 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
+    <PackageReference Include="Serilog.Extensions.Logging.File" Version="1.1.0" />
   </ItemGroup>
 
 
   <ItemGroup>
     <ProjectReference Include="..\Eventures.Data\Eventures.Data.csproj" />
     <ProjectReference Include="..\Eventures.Domain\Eventures.Domain.csproj" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <Folder Include="Logs\" />
   </ItemGroup>
 
 </Project>
