--- a/Eventures/Eventures.Web/Eventures.Web.csproj
+++ b/Eventures/Eventures.Web/Eventures.Web.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Eventures.Data\Eventures.Data.csproj" />
     <ProjectReference Include="..\Eventures.Domain\Eventures.Domain.csproj" />
+    <ProjectReference Include="..\Eventures.Services\Eventures.Services.csproj" />
   </ItemGroup>
 
 
