--- a/Eventures/Eventures.Web/Eventures.Web.csproj
+++ b/Eventures/Eventures.Web/Eventures.Web.csproj
@@ -16,6 +16,7 @@
 
 
   <ItemGroup>
+    <ProjectReference Include="..\Eventures.Common\Eventures.Common.csproj" />
     <ProjectReference Include="..\Eventures.Data\Eventures.Data.csproj" />
     <ProjectReference Include="..\Eventures.Domain\Eventures.Domain.csproj" />
     <ProjectReference Include="..\Eventures.Services\Eventures.Services.csproj" />
