setup project architecture

--- a/Spotify/Web/Stopify.Web/Stopify.Web.csproj
+++ b/Spotify/Web/Stopify.Web/Stopify.Web.csproj
@@ -9,7 +9,17 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Data\Stopify.Data\Stopify.Data.csproj" />
+    <ProjectReference Include="..\..\Model\Stopify.Models\Stopify.Models.csproj" />
+    <ProjectReference Include="..\..\Service\Stopify.Services\Stopify.Services.csproj" />
   </ItemGroup>
 
 </Project>
