Added Stopify DbContext and renamed namespaces

--- a/Spotify/Web/Stopify.Web/appsettings.json
+++ b/Spotify/Web/Stopify.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Stopify.Web-36A8EB1E-73F8-4AD7-A546-0126507519B1;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=StopifyDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
