added User roles

--- a/Stopify/Data/Stopify.Data/Stopify.Data.csproj
+++ b/Stopify/Data/Stopify.Data/Stopify.Data.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Common\Stopify.Common\Stopify.Common.csproj" />
     <ProjectReference Include="..\..\Model\Stopify.Models\Stopify.Models.csproj" />
   </ItemGroup>
 
