--- a/Stopify/Web/Stopify.Web/Stopify.Web.csproj
+++ b/Stopify/Web/Stopify.Web/Stopify.Web.csproj
@@ -24,4 +24,12 @@
     <ProjectReference Include="..\..\Service\Stopify.Services\Stopify.Services.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="Areas\Administration\Controllers\" />
+    <Folder Include="Areas\Administration\Data\" />
+    <Folder Include="Areas\Administration\Models\" />
+    <Folder Include="Areas\Administration\Views\" />
+  </ItemGroup>
+
 </Project>
