--- a/Stopify/Service/Stopify.Services/Stopify.Services.csproj
+++ b/Stopify/Service/Stopify.Services/Stopify.Services.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Web\Stopify.Web.InputModels\Stopify.Web.InputModels.csproj" />
+  </ItemGroup>
+
 </Project>
