--- a/Stopify/Web/Stopify.Web/appsettings.json
+++ b/Stopify/Web/Stopify.Web/appsettings.json
@@ -7,5 +7,10 @@
       "Default": "Warning"
     }
   },
+  "Cloudinary": {
+    "CloudName": "mihailtanev",
+    "ApiKey": "643956476235313",
+    "ApiSecret": "FCTlXw2aTDGkx6IK4BvcBlzAvwQ"
+  },
   "AllowedHosts": "*"
 }
