--- a/Stopify/Web/Stopify.Web/Stopify.Web.csproj
+++ b/Stopify/Web/Stopify.Web/Stopify.Web.csproj
@@ -8,6 +8,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="CloudinaryDotNet" Version="1.8.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.2.0" />
