--- a/Stopify/Service/Stopify.Services.Models/Stopify.Services.Models.csproj
+++ b/Stopify/Service/Stopify.Services.Models/Stopify.Services.Models.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Model\Stopify.Models\Stopify.Models.csproj" />
+    <ProjectReference Include="..\Stopify.Services.Mapping\Stopify.Services.Mapping.csproj" />
+  </ItemGroup>
+
 </Project>
