--- a/Stopify/Web/Stopify.Web.InputModels/Stopify.Web.InputModels.csproj
+++ b/Stopify/Web/Stopify.Web.InputModels/Stopify.Web.InputModels.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Service\Stopify.Services.Models\Stopify.Services.Models.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="Microsoft.AspNetCore.Http.Features">
       <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.aspnetcore.http.features\2.2.0\lib\netstandard2.0\Microsoft.AspNetCore.Http.Features.dll</HintPath>
     </Reference>
